# stopwatch

./: CMakeLists.txt  CMakePresets.json  CPackOptions.cmake.in  LICENSE  README.md
include/stopwatch/: common.hpp  cpu_clock.hpp  stopwatch.hpp
